# BistroBot

./: README.md  instructions
bistrobot_ui/: CMakeLists.txt  package.xml
bistrobot_ui/backend/: user_client.py
bistrobot_ui/backend/templates/: home.html  location_select.html  location_selected.html  tray_select.html
kpbot_description/: CMakeLists.txt  package.xml
kpbot_description/launch/: display_coolbot.launch.xml  empty_world.launch.py  kpbot.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  start_world.py  turtlebot3_world.launch.py
kpbot_description/models/: model.sdf  models.config
kpbot_description/models/meshes/: wheel.stl  wheel1.stl  wheel2.stl  wheel3.stl  wheel4.stl
kpbot_description/rviz/: coolbot_config.rviz  kpbot_config.rviz
kpbot_description/urdf/: common_properties.xacro  coolbot_base.xacro  coolbot_gazebo.xacro  coolbot_lidar.xacro  coolbot_main.urdf.xacro  kpbot_base.xacro  kpbot_base2.xacro  kpbot_gazebo.xacro  kpbot_main.urdf.xacro  light.urdf
kpbot_interface/: CMakeLists.txt  package.xml
kpbot_interface/srv/: DeliveryPlan.srv
kpbot_interfaces/: CMakeLists.txt  package.xml
kpbot_lingonav/: CMakeLists.txt  package.xml
kpbot_lingonav/scripts/: kpbot_nav_client.py  kpbot_nav_manager.py  lingonav.py  lingonav_gpt.py  lingonav_spacy.py
kpbot_nav2/: CMakeLists.txt  package.xml
kpbot_nav2/launch/: amcl_localization.launch.py  kpbot_joy_control.launch.py  kpbot_mapping.launch.py  kpbot_navigation.launch.py  kpbot_rsp.launch.py  localization.launch.py  mapping.launch.py  nav_test.launch.py  navigation.launch.py
kpbot_nav2/params/: amcl.yaml  nav2_params.yaml  slam_params.yaml
kpbot_nav2/scripts/: joy_control.py  odometry.py  wheel_control.py
